--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240201023119">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240202040332">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -258,7 +258,27 @@
 
 
 		<main class="page">
-
+			<div class="page__main-presentation main-presentation">
+				<div class="main-presentation__container">
+					<div class="main-presentation__content">
+						<h1 class="main-presentation__title">Пластика у ведущего российского <span>хирурга</span></h1>
+						<button type="button" class="main-presentation__consultation btn btn_dark">Записаться на консультацию</button>
+						<div class="main-presentation__doctor">
+							<img class="main-presentation__icon" src="img/verification.png" alt="icon">
+							<div class="main-presentation__profile">
+								<span class="main-presentation__name">Илья Вячеславович</span>
+								<span class="main-presentation__label">Основатель <br>клиники</span>
+							</div>
+						</div>
+					</div>
+					<img class="main-presentation__bg" src="img/main/doctor.png" alt="doctor">
+				</div>
+			</div>
+			<div class="page__main main-page">
+				<div class="main-page__container">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia eius natus, reiciendis voluptatem ratione expedita eligendi, quasi quibusdam nulla temporibus facere aliquam laborum quas corporis architecto eos quo pariatur molestias.
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -316,7 +336,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240201023119"></script>
+	<script src="js/app.min.js?_v=20240202040332"></script>
 </body>
 
 </html>
