--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a target="_blank" href="feedback.html">Отзывы</a></li>
 			<li><a target="_blank" href="specialist-page.html">Страница специалиста</a></li>
 			<li><a target="_blank" href="contacts.html">Контакты</a></li>
+			<li><a target="_blank" href="about-us.html">О нас</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
