--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240202040332">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240202045803">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -271,7 +271,10 @@
 							</div>
 						</div>
 					</div>
-					<img class="main-presentation__bg" src="img/main/doctor.png" alt="doctor">
+					<div class="main-presentation__bg">
+						<img class="main-presentation__first-bg" src="img/main/doctor.png" alt="doctor">
+						<img class="main-presentation__second-bg" src="img/main/doctor-clear.png" alt="doctor">
+					</div>
 				</div>
 			</div>
 			<div class="page__main main-page">
@@ -336,7 +339,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240202040332"></script>
+	<script src="js/app.min.js?_v=20240202045803"></script>
 </body>
 
 </html>
