--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240202045803">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240204084431">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -496,6 +496,25 @@
 					</div>
 				</div>
 			</div>
+			<!-- faq chest -->
+			<div data-spollers class="main-page__question-block question-block ">
+				<details class="question-block__item">
+					<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+					<div class="question-block__body">Методики, применяемые в нашей клинике, сводят такой риск к минимуму. Молочная железа во время коррекции либо не повреждается, либо ее повреждения незначительны. Так что сама операция на грудное вскармливание большого влияния не оказывает.</div>
+				</details>
+				<details class="question-block__item">
+					<summary class="question-block__title">Какие анализы сдают перед операцией по увеличению груди?</summary>
+					<div class="question-block__body">Текст</div>
+				</details>
+				<details class="question-block__item">
+					<summary class="question-block__title">Остаются ли шрамы после увеличения груди?</summary>
+					<div class="question-block__body">Текст</div>
+				</details>
+				<details class="question-block__item">
+					<summary class="question-block__title">Какой период реабилитации после проведенной операции по увеличению груди?</summary>
+					<div class="question-block__body">Текст</div>
+				</details>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -591,7 +610,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240202045803"></script>
+	<script src="js/app.min.js?_v=20240204084431"></script>
 </body>
 
 </html>
