--- a/specialist-page.html
+++ b/specialist-page.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240202045803">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240204084431">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -485,6 +485,7 @@
 								<button type="button" class="portfolio__arrow-right"></button>
 							</div>
 						</div>
+						<a href="#" class="portfolio__all-works btn btn_light">Смотреть все работы</a>
 					</div>
 					<div data-watch-threshold="0.5" data-watch="navigator" class="specialist-page__feedback feedback-specialist">
 						<div class="feedback-specialist__container">
@@ -809,7 +810,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240202045803"></script>
+	<script src="js/app.min.js?_v=20240204084431"></script>
 </body>
 
 </html>
