--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<li><a target="_blank" href="contacts.html">Контакты</a></li>
 			<li><a target="_blank" href="about-us.html">О нас</a></li>
 			<li><a target="_blank" href="breast-augmentation.html">Увеличение груди</a></li>
-			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
+			<!-- <li><a target="_blank" href="common.html">Повторяющиеся</a></li> -->
 		</ol>
 	</div>
 </body>
