--- a/news.html
+++ b/news.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-	<title>HomePage</title>
+	<title>Новости</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240204084431">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240204150224">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -198,7 +198,7 @@
 								</div>
 							</li>
 							<li class="menu__item"><a href="prices.html" class="menu__link">Цены</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Специалисты</a></li>
+							<li class="menu__item"><a href="clinic-management.html" class="menu__link">Специалисты</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Наши работы</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">О клинике</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
@@ -821,7 +821,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240204084431"></script>
+	<script src="js/app.min.js?_v=20240204150224"></script>
 </body>
 
 </html>
