--- a/contacts.html
+++ b/contacts.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-	<title>HomePage</title>
+	<title>Контакты</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240204084431">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240204150224">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -198,7 +198,7 @@
 								</div>
 							</li>
 							<li class="menu__item"><a href="prices.html" class="menu__link">Цены</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Специалисты</a></li>
+							<li class="menu__item"><a href="clinic-management.html" class="menu__link">Специалисты</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Наши работы</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">О клинике</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
@@ -313,7 +313,7 @@
 						</div>
 						<img src="img/contacts/image.png" alt="image" class="contacts__image">
 					</div>
-					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0bf5cecfed93287b9a9778bff5eae1f7ab8874e862ba77e7516b4972b3aabcd5&amp;width=100%25&amp;height=478&amp;lang=ru_RU&amp;scroll=true&_v=20240204084431"></script>
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0bf5cecfed93287b9a9778bff5eae1f7ab8874e862ba77e7516b4972b3aabcd5&amp;width=100%25&amp;height=478&amp;lang=ru_RU&amp;scroll=true&_v=20240204150224"></script>
 					<div class="contacts__consultation-form consultation-form">
 						<div class="consultation-form__container">
 							<form action="#" class="consultation-form__form">
@@ -425,7 +425,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240204084431"></script>
+	<script src="js/app.min.js?_v=20240204150224"></script>
 </body>
 
 </html>
