--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240204150224">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240205221134">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -313,7 +313,7 @@
 						</div>
 						<img src="img/contacts/image.png" alt="image" class="contacts__image">
 					</div>
-					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0bf5cecfed93287b9a9778bff5eae1f7ab8874e862ba77e7516b4972b3aabcd5&amp;width=100%25&amp;height=478&amp;lang=ru_RU&amp;scroll=true&_v=20240204150224"></script>
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0bf5cecfed93287b9a9778bff5eae1f7ab8874e862ba77e7516b4972b3aabcd5&amp;width=100%25&amp;height=478&amp;lang=ru_RU&amp;scroll=true&_v=20240205221134"></script>
 					<div class="contacts__consultation-form consultation-form">
 						<div class="consultation-form__container">
 							<form action="#" class="consultation-form__form">
@@ -390,7 +390,7 @@
 	<div id="youtube" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<button data-close type="button" class="popup__close">&#10006;</button>
+				<button data-close type="button" class="popup__close"></button>
 				<div class="popup__text">
 					<div data-popup-youtube-place class="popup__video">
 
@@ -407,7 +407,7 @@
 	<div id="consultation" aria-hidden="true" class="consultation__popup popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<button data-close type="button" class="popup__close">&#10006;</button>
+				<button data-close type="button" class="popup__close"></button>
 				<div class="popup__text">
 					<form action="#" class="form-consultation">
 						<h2 class="form-consultation__title">Записаться</h2>
@@ -425,7 +425,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240204150224"></script>
+	<script src="js/app.min.js?_v=20240205221134"></script>
 </body>
 
 </html>
