--- a/video-reviews.html
+++ b/video-reviews.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240204150224">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240205221134">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -402,7 +402,7 @@
 	<div id="youtube" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<button data-close type="button" class="popup__close">&#10006;</button>
+				<button data-close type="button" class="popup__close"></button>
 				<div class="popup__text">
 					<div data-popup-youtube-place class="popup__video">
 
@@ -419,7 +419,7 @@
 	<div id="consultation" aria-hidden="true" class="consultation__popup popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
-				<button data-close type="button" class="popup__close">&#10006;</button>
+				<button data-close type="button" class="popup__close"></button>
 				<div class="popup__text">
 					<form action="#" class="form-consultation">
 						<h2 class="form-consultation__title">Записаться</h2>
@@ -437,7 +437,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240204150224"></script>
+	<script src="js/app.min.js?_v=20240205221134"></script>
 </body>
 
 </html>
